--- a/scripts/nvidia-gpu-fan-control.service
+++ b/scripts/nvidia-gpu-fan-control.service
@@ -5,6 +5,7 @@ Description=NVIDIA GPU fan controller with nvidia-ml-py
 Type=simple
 Restart=always
 RestartSec=10
+WorkingDirectory=/path/to/cwd
 ExecStart=/path/to/your/python path/to/fan_control_nvidia-ml-py/src/main.py
 
 [Install]
